--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,13 +1,20 @@
 {
-  "orgName": "tsezariizhydetskyi company",
+  "orgName": "Cesar",
+  "country": "US",
   "edition": "Developer",
-  "features": ["EnableSetPasswordInApi"],
+  "description": "Scratch Org for SFDX Azure Pipelines Demo",
+  "hasSampleData": false,
+  "language": "en_US",
+  "features": ["Communities", "B2BCommerce", "CPQ", "StateAndCountryPicklist"],
   "settings": {
-    "lightningExperienceSettings": {
-      "enableS1DesktopEnabled": true
-    },
-    "mobileSettings": {
-      "enableS1EncryptedStoragePref2": false
+        "lightningExperienceSettings": {
+          "enableS1DesktopEnabled": true
+        },
+        "accountSettings": {
+          "enableAccountTeams": true,
+          "enableAccountHistoryTracking": true,
+          "enableContactHistoryTracking": true
+        }
     }
   }
 }
