--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,28 +1,47 @@
+# List of branches listenings to pushes
 trigger:
   batch: "true"
   branches:
     include:
       - develop
       - master
+      - feature*
   paths:
     exclude:
       - README.md
       - azure-pipelines.yml
+# Executing pipeline on pull requests
 pr:
-  autoCancel: "true"
   branches:
     include:
       - develop
-      - master
-  paths:
-    exclude:
-      - README.md
+      - master 
+# Variables being defined before, only to facilitate reading of the yaml
+variables:
+- group: 'PIPELINE_VARS'
+- name: isFeature
+  value: $[startsWith(variables['Build.SourceBranch'], 'refs/heads/feature')]
+- name: isPR2Develop
+  value: $[eq(variables['System.PullRequest.TargetBranch'], 'refs/heads/develop')]
+- name: isDevelop
+  value: $[eq(variables['Build.SourceBranch'], 'refs/heads/develop')]
+- name: isMain
+  value: $[eq(variables['Build.SourceBranch'], 'refs/heads/main')]
+
+pool:
+  vmImage: ubuntu-latest      
+
+# each stage has a condition - it will be skipped if the condition is not achieved. The conditions were already calculated before.
+
+## build/pipeline run naming format 
+name: $(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
+
 jobs:
 #Deploy develop to DEV
 - job: DEVDeploy
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/develop'))
+  #condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/develop'))
   steps:
-    - task: NodeTool@0
+    - task: SFDXToolsSetup@0
       inputs:
         versionSpec: '>=14.6.0'
         checkLatest: true
@@ -33,23 +52,33 @@ jobs:
         echo 'y' | sfdx plugins:install sfdx-git-delta
       displayName: Install Salesforce Git Delta
     - bash: 
-        sfdx sgd:source:delta --to HEAD --from HEAD^ --output .
-      displayName: Get Commit Delta Components
-    - bash: 
         sfdx plugins:install @salesforce/sfdx-scanner
-      displayName: Install Cli scanner     
+      displayName: Install Cli scanner       
+    - task: GenerateDelta_FEATURE@0
+      condition: eq(variables.isFeature, true)             
+    - bash: 
+        sfdx sgd:source:delta --to HEAD --from HEAD^ --output .
+      displayName: Get Delta Components from commit dif
+    - task: GenerateDelta_PR@0
+      condition: eq(variables.isPR2Develop, true)      
+    - bash: 
+        sfdx sgd:source:delta --to System.PullRequest.TargetBranch --from System.PullRequest.SourceBranch --output .
+      displayName: Get Delta Components From Feature PR
+    - task: AuthorizeJWT@0 
     - bash: 
         sfdx force:auth:jwt:grant --clientid $(salesforceDevOrgClientId) --jwtkeyfile ./build/server.key --username $(salesforceDevOrgUserName) --instanceurl $(salesforceDevOrgInstanceURL) -a devOrg
       displayName: Authorize salesforce org
     - bash: #cahnged output directory to src
         sfdx force:source:convert --manifest=package/package.xml  --outputdir=src
       displayName: Convert to deploy source
+    - task: SCANNER_RUN@0  
     - bash:
        mkdir pmdScanner 
       displayName: create folder for storing PMD scanner results
     - bash: 
         sfdx scanner:run --target src --format junit --outputfile=pmdScanner --normalize-severity --category "Security,Design,Best Practices" --severity-threshold=1
       displayName: Run PMD Scanner
+    - task: Deploy_AND_REPORT@0                                    
     - bash: 
         sfdx force:mdapi:deploy -l RunLocalTests -d src -u $(salesforceDevOrgUserName) -w 10
       displayName: Deploy source code
